--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,82 @@
-.App {
+body {
+  margin: 0px;
+  padding: 0%;
+  
+}
+.bg-dark {
+  background-color: #eeeeee!important;
+}
+.nav-link {
+  display: block;
+  padding: .5rem 1rem;
+  margin-right: 31px;
+  font-size: 18px;
+}
+.nav-link a {
+  color: #17a2b8;
+
+}
+.heading1{
   text-align: center;
+  font-size: 25px;
+  color: #17a2b8;
+  position: absolute;
+  left: 40%;
+  top: 90px;;
+  margin-bottom: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar-dark .navbar-brand {
+    color: #17a2b8;
+    font-weight: bold;
+    font-size: 25px;
+}
+.navbar-dark .navbar-brand:hover {
+  color: #000000;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navbar-dark .navbar-nav .active>.nav-link{
+  color: #17a2b8;
+}
+.navbar-dark .navbar-nav .active>.nav-link:hover {
+  color: #141414;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.navbar-dark .navbar-nav .nav-link {
+  color: rgb(63 173 203);
+  margin-right: 5px;
+
+}
+.navbar-dark .navbar-nav .nav-link:hover {
+  color: black
+
+
+}
+.Apppp .firebaseui-idp-button {
+  direction: ltr;
+  font-weight: 500;
+  height: auto;
+  line-height: normal;
+  max-width: 300px;
+  min-height: 70px;
+  padding: 8px 16px;
+  text-align: left;
+  width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.Apppp .firebaseui-idp-text {
+  color: #fff;
+  display: table-cell;
+  font-size: 16px;
+  padding-left: 16px;
+  text-transform: none;
+  vertical-align: middle;
+}
+.Apppp {
+  height: 500px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.MuiSelect-select.MuiSelect-select {
+  padding-right: 24px;
+  width: 360px;
 }
